# pl-slam-ros

./: .gitignore  CMakeLists.txt  README.md  build_dependencies.sh  package.xml
dependencies/pl-slam/: CMakeLists.txt
dependencies/pl-slam/config/dataset_params/: zed_params.yaml  zed_params_raw.yaml
dependencies/pl-slam/include/: keyFrame.h  mapFeatures.h  mapHandler.h  slamScene.h
dependencies/pl-slam/src/: slamConfig.cpp
dependencies/stvo-pl/: CMakeLists.txt  build.sh
dependencies/stvo-pl/include/: auxiliar.h  stereoFeatures.h
dependencies/stvo-pl/src/: stereoFrameHandler.cpp
launch/: plslam.launch
src/: main.cpp  node.h  publisher.h
