<?xml version="1.0"?>
<package format="2">
  <name>pl_slam_ros</name>
  <version>0.0.0</version>
  <description>PL-SLAM</description>
  <license>BSD</license>
  <maintainer email="example@example.com">example</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>yaml-cpp</depend>

</package>
